added option to add users guest and admin to OS

--- a/ansible/playbooks/ambari/prerequisites.yml
+++ b/ansible/playbooks/ambari/prerequisites.yml
@@ -26,6 +26,12 @@
     service:
       name: nscd
       state: started
+  - name: add unix user admin
+    user:
+      name: admin
+  - name: add unix user guest
+    user:
+      name: guest
   handlers:
     - name: restart ntpd
       service:
