added option to add users guest and admin to OS

--- a/ansible/playbooks/ambari/prerequisites.yml
+++ b/ansible/playbooks/ambari/prerequisites.yml
@@ -32,6 +32,9 @@
   - name: add unix user guest
     user:
       name: guest
+  - name: add unix user centos
+    user:
+      name: centos
   handlers:
     - name: restart ntpd
       service:
