--- a/ansible/playbooks/ambari/ambari-agent.yml
+++ b/ansible/playbooks/ambari/ambari-agent.yml
@@ -2,10 +2,10 @@
 - hosts: all
   remote_user: centos
   tasks:
-  - name: copy ambari.repo to all hosts
-    copy:
-      src: /home/centos/ambari.repo
-      dest: /etc/yum.repos.d
+  - name: download ambari repo
+    get_url:
+      url: http://public-repo-1.hortonworks.com/ambari/centos7/2.x/updates/2.5.1.0/ambari.repo
+      dest: /etc/yum.repos.d/ambari.repo
   - name: make sure ambari-agent is latest
     yum:
       name: ambari-agent
