--- a/ansible/playbooks/hbase/hbase-standalone.yml
+++ b/ansible/playbooks/hbase/hbase-standalone.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  remote_user: centos
+  remote_user: vagrant
   tasks:
   - name: add unix user hbase
     user:
@@ -26,3 +26,11 @@
       dest: /opt/hbase
       remote_src: yes
       keep_newer: yes
+  - name: change hbase directory permissions
+    file:
+      path: /opt/hbase/hbase-2.0.0-alpha-1
+      state: directory
+      owner: hbase
+      group: hbase
+      mode: 0775
+      recurse: yes
