--- a/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
@@ -46,7 +46,7 @@
     get_url:
       url: "{{ hbase_url }}"
       dest: "/tmp/{{ hbase_version }}.bin.tar.gz"
-      checksum: "sha1:{{ hbase_sha1_sum }}"
+      checksum: "md5:{{ hbase_md5_sum }}"
   - name: create hbase directory
     file:
       path: /opt/hbase
