--- a/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
@@ -1,52 +1,11 @@
 ---
 # tasks file for aervits.hbase
-  - name: export HADOOP_HOME for hbase user
-    lineinfile:
-      path: /home/hbase/.bashrc
-      line: export HADOOP_HOME="/opt/hadoop/{{ hadoop_version  }}"
-      state: present
-      create: yes
-  - name: alias hdfs for hbase user
-    lineinfile:
-      path: /home/hbase/.bashrc
-      line: alias hdfs=$HADOOP_HOME/bin/hdfs
-      state: present
-      create: yes
-  - name: export HBASE_HOME for vagrant user
-    lineinfile:
-      path: /home/vagrant/.bashrc
-      line: export HBASE_HOME="/opt/hbase/{{ hbase_version }}"
-      state: present
-      create: yes
-  - name: export HBASE_HOME for hadoop user
-    lineinfile:
-      path: /home/hadoop/.bashrc
-      line: export HBASE_HOME="/opt/hbase/{{ hbase_version }}"
-      state: present
-      create: yes
-  - name: export HBASE_HOME for hbase user
-    lineinfile:
-      path: /home/hbase/.bashrc
-      line: export HBASE_HOME="/opt/hbase/{{ hbase_version }}"
-      state: present
-      create: yes
-  - name: alias hbase for hbase user
-    lineinfile:
-      path: /home/hbase/.bashrc
-      line: alias hbase=$HBASE_HOME/bin/hbase
-      state: present
-      create: yes
-  - name: alias hbase for vagrant user
-    lineinfile:
-      path: /home/vagrant/.bashrc
-      line: alias hbase=$HBASE_HOME/bin/hbase
-      state: present
-      create: yes
   - name: download hbase release
     get_url:
       url: "{{ hbase_url }}"
       dest: "/tmp/{{ hbase_version }}.bin.tar.gz"
       checksum: "md5:{{ hbase_md5_sum }}"
+
   - name: create hbase directory
     file:
       path: /opt/hbase
@@ -54,6 +13,7 @@
       owner: hbase
       group: hbase
       mode: 0775
+
   - name: extract hbase release
     unarchive:
       src: "/tmp/{{ hbase_version }}.bin.tar.gz"
@@ -61,16 +21,19 @@
       remote_src: yes
       keep_newer: yes
       creates: "/opt/hbase/{{ hbase_version }}"
+
   - name: configure hbase-site.xml
     template:
       src: templates/hbase-site.distributed
       dest: "/opt/hbase/{{ hbase_version }}/conf/hbase-site.xml"
+
   - name: edit hbase-env.sh JVM args
     lineinfile:
       dest: "/opt/hbase/{{ hbase_version }}/conf/hbase-env.sh"
       regexp: '^export HBASE_OPTS='
       line: 'export HBASE_OPTS="-XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=4"'
       create: yes
+
   - name: change hbase directory permissions
     file:
       path: "/opt/hbase/{{ hbase_version }}"
@@ -79,3 +42,16 @@
       group: hbase
       mode: 0775
       recurse: yes
+
+  - name: export HBASE_HOME
+    lineinfile:
+      path: /etc/environment
+      line: export HBASE_HOME="/opt/hbase/{{ hbase_version }}"
+      state: present
+      create: yes
+  - name: alias hbase
+    lineinfile:
+      path: /etc/bashrc
+      line: alias hbase=$HBASE_HOME/bin/hbase
+      state: present
+      create: yes
