--- a/ansible/playbooks/ambari/prerequisites.yml
+++ b/ansible/playbooks/ambari/prerequisites.yml
@@ -1,6 +1,11 @@
 ---
 - hosts: all
   remote_user: centos
+  vars:
+    users:
+      - centos
+      - guest
+      - admin
   tasks:
   - name: make sure all host files match
     copy:
@@ -46,7 +51,8 @@
   - name: add unix user "{{ item }}"
     user:
       name: "{{ item }}"
-    with_items: admin, guest, centos
+      state: present
+    with_items: "{{ users }}"
   handlers:
     - name: restart ntpd
       service:
