--- a/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/tasks/main.yml
@@ -24,7 +24,7 @@
 
   - name: configure hbase-site.xml
     template:
-      src: templates/hbase-site.distributed
+      src: templates/hbase-site.xml
       dest: "/opt/hbase/{{ hbase_version }}/conf/hbase-site.xml"
 
   - name: edit hbase-env.sh JVM args
