ambari-agent role

--- a/ansible/playbooks/provision/roles/aervits.ambari-agent/handlers/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.ambari-agent/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
 # handlers file for aervits.ambari-agent
+  - name: restart ambari-agent
+    service:
+      name: ambari-agent
+      state: restarted
