makes sure latest file is downloaded

--- a/ansible/playbooks/provision/roles/aervits.ambari-agent/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.ambari-agent/tasks/main.yml
@@ -4,6 +4,7 @@
     get_url:
       url: "{{ ambari_repo }}"
       dest: /etc/yum.repos.d/ambari.repo
+      force: yes
   - name: make sure ambari-agent is latest
     yum:
       name: ambari-agent
