--- a/ansible/playbooks/provision/roles/aervits.ambari-server/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.ambari-server/tasks/main.yml
@@ -1,13 +1,21 @@
 ---
 # tasks file for aervits.ambari-server
+
   - name: download ambari repo
     get_url:
       url: "{{ ambari_repo }}"
       dest: /etc/yum.repos.d/ambari.repo
       force: yes
+
   - name: make sure ambari-server is latest
     package:
       name: ambari-server
       state: latest
+
   - name: run ambari-server silent install
     shell: ambari-server setup -s
+
+  - name: restart ambari-server
+    service:
+      name: ambari-server
+      state: restarted
