limited to kerberos server only

--- a/ansible/playbooks/provision/kerberos-playbook.yml
+++ b/ansible/playbooks/provision/kerberos-playbook.yml
@@ -1,8 +1,6 @@
 ---
-- hosts: all
+- hosts: kerberos-server
   roles:
-#    - aervits.ambari-prereqs
-#    - aervits.ambari-server
     - aervits.kerberos-server
   remote_user: centos
   become: true
