--- a/ansible/playbooks/provision/roles/aervits.kerberos-server/templates/krb5.conf
+++ b/ansible/playbooks/provision/roles/aervits.kerberos-server/templates/krb5.conf
@@ -12,15 +12,15 @@ includedir /etc/krb5.conf.d/
  renew_lifetime = 7d
  forwardable = true
  rdns = false
- default_realm = EXAMPLE.COM
+ default_realm = "{{ realm }}"
  default_ccache_name = KEYRING:persistent:%{uid}
 
 [realms]
  EXAMPLE.COM = {
-  kdc = hadoop.example.com
-  admin_server = hadoop.example.com
+  kdc = "{{ kerberos_server_hostname }}"
+  admin_server = "{{ kerberos_server_hostname }}"
  }
 
 [domain_realm]
- .example.com = EXAMPLE.COM
- example.com = EXAMPLE.COM
+ .example.com = "{{ realm }}"
+ example.com = "{{ realm }}"
