added variables for realm and krb server

--- a/ansible/playbooks/provision/roles/aervits.kerberos-server/templates/krb5.conf
+++ b/ansible/playbooks/provision/roles/aervits.kerberos-server/templates/krb5.conf
@@ -12,15 +12,15 @@ includedir /etc/krb5.conf.d/
  renew_lifetime = 7d
  forwardable = true
  rdns = false
- default_realm = "{{ realm }}"
+ default_realm = {{ realm }}
  default_ccache_name = KEYRING:persistent:%{uid}
 
 [realms]
  EXAMPLE.COM = {
-  kdc = "{{ kerberos_server_hostname }}"
-  admin_server = "{{ kerberos_server_hostname }}"
+  kdc = {{ kerberos_server_hostname }}
+  admin_server = {{ kerberos_server_hostname }}
  }
 
 [domain_realm]
- .example.com = "{{ realm }}"
- example.com = "{{ realm }}"
+ .example.com = {{ realm }}
+ example.com = {{ realm }}
