--- a/ansible/playbooks/provision/roles/aervits.kerberos-server/templates/krb5.conf
+++ b/ansible/playbooks/provision/roles/aervits.kerberos-server/templates/krb5.conf
@@ -16,11 +16,11 @@ includedir /etc/krb5.conf.d/
  default_ccache_name = KEYRING:persistent:%{uid}
 
 [realms]
- EXAMPLE.COM = {
+ {{ realm }} = {
   kdc = {{ kerberos_server_hostname }}
   admin_server = {{ kerberos_server_hostname }}
  }
 
 [domain_realm]
- .example.com = {{ realm }}
- example.com = {{ realm }}
+ .field.hortonworks.com = {{ realm }}
+ field.hortonworks.com = {{ realm }}
